Fixed overflow for rich text area

--- a/public/main.css
+++ b/public/main.css
@@ -1102,8 +1102,11 @@ ul.category-breadcrumb li i {
     padding: 4px;
 }
 .textarea-enlarged-container .editor-content {
+    position: absolute;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
+    max-height: 100%;
+    overflow: auto;
 }
 .textarea-enlarged-container .editor-content > div, .textarea-enlarged-container .editor-content  div.ProseMirror {
     width: 100%;
@@ -1117,11 +1120,11 @@ ul.category-breadcrumb li i {
 
 .rich-text-editor-container .editor-frame {
     position: relative;
-    padding: 4px;
     border: 1px solid #999;
     background: white;
 }
 .rich-text-editor-container .editor-content {
+    padding: 4px;
     overflow: auto;
 }
 
